v2.6.5 Update to use jruby-complete-1.7.17
* Some more refactoring including helper_methods

v2.6.4 Update to use jruby-complete-1.7.16.1
* Some general refactoring of app.rb, moved examples to
* their own github repo.

v2.6.3 Update to use jruby-complete-1.7.16
* Avoid Vec2D hypot NaNN with guards, correct 
* --inner template, some more refactoring, full_screen is now only
* available via a runtime arg (there is only one way to do it..)
* now adding Range.clip (like numpy.clip) which is used to implement
* processing constrain. Sometimes it will be better to use clip directly.

v2.6.2 Update to use jruby-complete-1.7.15
* X and Y screen offset for sketch, can be set in ~/.rp5rc
* A post initialization hook has been included to allow custom parameter setting
* More deprecated methods have been removed anyone wanting pow(x), sq(x),
* radians(x) can easily make their own if they must. Prefer x**2, x * x and
* x.radians in ruby-processing etc..

v2.6.1 The templates for the improved sketch creator, broke app export
* fix means templates are now hard coded (functionality retained)
* update to use jruby-complete-1.7.14.

v2.6.0 Removal of eval hack, and deprecating / removing processing
* convenience methods. New improved sketch creator, added templates
* class wrapped --wrap, and "inner class mixin" --inner.

v2.5.1 Some fixes, and remove eval hack from base_exporter
* Since this release some processing convenience methods are
* deprecated see wiki (includes second, minute, hour in favor
* of ruby alternatives t = Time.now, t.hour, t.sec, t.min
* and theta.radians should be used instead of radians(theta))
* These changes will be seen in 2.6.0 release, with removal of
* yet another eval hack.

v2.5.0 Some refactoring, and a new install procedure
* Some re-factoring of both code and examples, including
* replacing the overuse of __FILE__ with 'relative_require'
* 'install_jruby_complete', replaced by 'rp5 setup install'